<resources>
    <string name="app_name">TrackerApplication</string>
    <string name="add_new">Add New Member</string>
    <string name="add">Add</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_your_mobile">Enter mobile number</string>
    <string name="enter_amount">Amount</string>
    <string name="you_paid">Your total paid amount \u20B9 : </string>
    <string name="total">Total \u20B9:</string>
    <string name="view_summery">View Summery</string>
    <string name="add_new_expence">Add New Expenses</string>
    <string name="paid_for">Paid For</string>
    <string name="mobile_already_exist">Mobile Number Already exist</string>
    <string name="invalid_input">Invalid Inputs</string>
</resources>